--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation'com.vladmihalcea:hibernate-types-52:2.17.3'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.7.3'
 
+    implementation 'org.springframework.kafka:spring-kafka'
 
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
